???

  * Fixed: The first path segment of a relative URI was eaten
      (Functions ParseSegmentNz and ParseMustBeSegmentNzNc)
  * Fixed: uri->scheme.first was not reset in some cases
      (Function ParseMustBeSegmentNzNc)
  * Improved: Test suite now built on "make check", not before
  * Fixed: Test suite always returned 0 (success)

2007-04-23 -- 0.3.4

  * Added: Shared library support (moved to libtool)

2007-04-03 -- 0.3.3

  * Fixed: Now unix EOLs constantly
  * Fixed: Added forgotten files to release package

2007-03-31 -- 0.3.2

  * Fixed: Now compiles on FreeBSD

2007-03-28 -- 0.3.1

  * Fixed: Now compiles on Mac OS X

2007-03-26 -- 0.3.0

  * Added: New API, old marked deprecated
  * Added: Unicode support (think wchar_t)
  * Added: Doxygen code documentation
  * Added: Test suite using CppTest
  * Changed: Library code is now licensed under the new BSD license.
      The test suite code is licensed under LGPL.

2006-12-08 -- 0.2.1