@@ -1,5 +1,5 @@
 AC_PREREQ(2.59)
-AC_INIT([uriparser], [0.3.4])
+AC_INIT([uriparser], [0.4.0])
 AM_INIT_AUTOMAKE([1.9 foreign])
 AM_CONFIG_HEADER(test/CppTest/config.h)
 
