@@ -12,7 +12,7 @@ PROJECT_NAME = uriparser
 # The PROJECT_NAME tag is a single word (or a sequence of words surrounded by double-quotes) that should identify the project for which the documentation is generated. This name is used in the title of most generated pages and in a few other places.
 
 
-PROJECT_NUMBER = 0.3.4
+PROJECT_NUMBER = 0.4.0
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. This could be handy for archiving the generated documentation or if some version control system is used.
 
 
